--- a/.github/workflows/gds.yaml
+++ b/.github/workflows/gds.yaml
@@ -22,6 +22,11 @@ jobs:
         run : |
           make tinytapeout
 
+      - name: Cleanup
+        shell: bash
+        run : |
+          sudo rm -rf /usr/local/share/silice
+
       - name: Build GDS
         uses: TinyTapeout/tt-gds-action/orfs@tt09
 
